src/test/deca/context/invalid/created/method-redef-incomp.deca
//Description :
// Test d'un appel d'attribut
//
// Resultats :
// Erreur

class A {
    int a;
    
    int b() {
        print("bjr non");
    } 

}

class B extends A {
    
    void b() {
        print("bjr tjs pas");
    }
    
}

{
    A a = new B();
    a.b;
}
